[package]
name = "rester"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
clap = "3.0.0-beta.4"
regex = "1.5.4"
flate2 = "1.0.22"
tar = "0.4.37"
ureq = { version = "2.2.0", features = ["json"] }
